package simpledb.storage;

import simpledb.common.Type;

import java.io.Serializable;
import java.util.*;

/**
 * TupleDesc describes the schema of a tuple.
 */
public class TupleDesc implements Serializable {

    /**
     * A help class to facilitate organizing the information of each field
     */
    public static class TDItem implements Serializable {

        private static final long serialVersionUID = 1L;

        /**
         * The type of the field
         */
        public final Type fieldType;

        /**
         * The name of the field
         */
        public final String fieldName;

        public TDItem(Type t, String n) {
            this.fieldName = n;
            this.fieldType = t;
        }

        public String toString() {
            return fieldName + "(" + fieldType + ")";
        }
    }

    class tupleDescIterator implements Iterator<TDItem> {

        private int ptr;

        public tupleDescIterator() {
            ptr = 0;
        }

        @Override
        public boolean hasNext() {
            return (ptr != numFields());
        }

        @Override
        public TDItem next() {
            TDItem ret = items[ptr];
            ptr += 1;
            return ret;
        }
    }

    /**
     * @return An iterator which iterates over all the field TDItems
     * that are included in this TupleDesc
     */
    public Iterator<TDItem> iterator() {
        // some code goes here
        return new tupleDescIterator();
    }

    private static final long serialVersionUID = 1L;

    // fields
    private final TDItem[] items;

    public TDItem[] getItems() {
        return items;
    }

    /**
     * Helper method to help construct a TupleDesc
     * Dispatch design
     */
    private static TDItem[] constructorHelper(Type[] typeAr, String[] fieldAr) {
        int n = typeAr.length;
        TDItem[] items = new TDItem[n];
        for (int i = 0; i < n; i++) {
            if (fieldAr == null) {
                items[i] = new TDItem(typeAr[i], null);
            } else {
                items[i] = new TDItem(typeAr[i], fieldAr[i]);
            }
        }
        return items;
    }

    /**
     * Create a new TupleDesc with typeAr.length fields with fields of the
     * specified types, with associated named fields.
     *
     * @param typeAr  array specifying the number of and types of fields in this
     *                TupleDesc. It must contain at least one entry.
     * @param fieldAr array specifying the names of the fields. Note that names may
     *                be null.
     */
    public TupleDesc(Type[] typeAr, String[] fieldAr) {
        items = constructorHelper(typeAr, fieldAr);
    }

    /**
     * Constructor. Create a new tuple desc with typeAr.length fields with
     * fields of the specified types, with anonymous (unnamed) fields.
     *
     * @param typeAr array specifying the number of and types of fields in this
     *               TupleDesc. It must contain at least one entry.
     */
    public TupleDesc(Type[] typeAr) {
        items = constructorHelper(typeAr, null);
    }

    /**
     * Constructor. Create a new tuple desc with tdItems
     *
     * @param items array of TDItems
     */
    public TupleDesc(TDItem[] items) {
        this.items = items;
    }


    /**
     * @return the number of fields in this TupleDesc
     */
    public int numFields() {
        return items.length;
    }

    /**
     * Gets the (possibly null) field name of the ith field of this TupleDesc.
     *
     * @param i index of the field name to return. It must be a valid index.
     * @return the name of the ith field
     * @throws NoSuchElementException if i is not a valid field reference.
     */
    public String getFieldName(int i) throws NoSuchElementException {
        if (i < 0 || i > numFields()) throw new NoSuchElementException("i is not a valid field reference!");
        return items[i].fieldName;
    }

    /**
     * Gets the type of the ith field of this TupleDesc.
     *
     * @param i The index of the field to get the type of. It must be a valid
     *          index.
     * @return the type of the ith field
     * @throws NoSuchElementException if i is not a valid field reference.
     */
    public Type getFieldType(int i) throws NoSuchElementException {
        if (i < 0 || i > numFields()) throw new NoSuchElementException("i is not a valid field reference!");
        return items[i].fieldType;
    }

    /**
     * Find the index of the field with a given name.
     *
     * @param name name of the field.
     * @return the index of the field that is first to have the given name.
     * @throws NoSuchElementException if no field with a matching name is found.
     */
    public int fieldNameToIndex(String name) throws NoSuchElementException {
        for (int i = 0; i < numFields(); i++) {
            if (Objects.equals(items[i].fieldName, name)) return i;
        }
        throw new NoSuchElementException("No field with a matching name is found");
    }

    /**
     * @return The size (in bytes) of tuples corresponding to this TupleDesc.
     * Note that tuples from a given TupleDesc are of a fixed size.
     */
    public int getSize() {
        int size = 0;
        for (TDItem item : items) {
            size += item.fieldType.getLen();
        }
        return size;
    }

    /**
     * Merge two TupleDescs into one, with td1.numFields + td2.numFields fields,
     * with the first td1.numFields coming from td1 and the remaining from td2.
     *
     * @param td1 The TupleDesc with the first fields of the new TupleDesc
     * @param td2 The TupleDesc with the last fields of the TupleDesc
     * @return the new TupleDesc
     */
    public static TupleDesc merge(TupleDesc td1, TupleDesc td2) {
        int td1Len = td1.numFields();
        int td2Len = td2.numFields();
        int len = td1Len + td2Len;

        TDItem[] td1Items = td1.getItems();
        TDItem[] td2Items = td2.getItems();

        TDItem[] newItems = new TDItem[len];

        System.arraycopy(td1Items, 0, newItems, 0, td1Len);
        System.arraycopy(td2Items, 0, newItems, td1Len, td2Len);

        return new TupleDesc(newItems);
    }


    /**
     * Compares the specified object with this TupleDesc for equality. Two
     * TupleDescs are considered equal if they have the same number of items
     * and if the i-th type in this TupleDesc is equal to the i-th type in o
     * for every i.
     *
     * @param o the Object to be compared for equality with this TupleDesc.
     * @return true if the object is equal to this TupleDesc.
     */

    public boolean equals(Object o) {
        if (o == this) {
            return true;
        }

        if (!(o instanceof TupleDesc toCompare)) {
            return false;
        }

        if (numFields() != toCompare.numFields()) return false;
        // name can be null
        for (int i = 0; i < numFields(); i++) {
            boolean ifName = items[i].fieldName == null ? toCompare.getFieldName(i) == null : Objects.equals(toCompare.getFieldName(i), this.getFieldName(i));
            boolean ifField = items[i].fieldType == toCompare.getFieldType(i);

            if (!ifField || !ifName) {
                return false;
            }
        }
        return true;
    }

    public int hashCode() {
        // If you want to use TupleDesc as keys for HashMap, implement this so
        // that equal objects have equals hashCode() results
        throw new UnsupportedOperationException("unimplemented");
    }

    private String indexFactory(int index) {
        return "[" + index + "]";
    }

    /**
     * Returns a String describing this descriptor. It should be of the form
     * "fieldType[0](fieldName[0]), ..., fieldType[M](fieldName[M])", although
     * the exact format does not matter.
     *
     * @return String describing this descriptor.
     */
    public String toString() {
        // some code goes here
        StringBuilder str = new StringBuilder();
        for (int i = 0; i < numFields(); i++) {
            str.append(items[i].fieldType.toString()).append(indexFactory(i)).append("(").append(items[i].fieldName).append(indexFactory(i)).append(")\n");
        }
        return str.toString();
    }
}
